# datasette-files

./: .gitignore  DESIGN.md  NEXT_STEPS.md  README.md  dev-server.sh  pyproject.toml
.github/workflows/: test.yml
datasette_files/: __init__.py  base.py  blob.py  filesystem.py  hookspecs.py  local.py  pillow_thumbnails.py  pillow_worker.py
datasette_files/static/: datasette-file-cell.js  datasette-file-field.js  datasette-file-picker.js  datasette-file-upload.js
datasette_files/templates/: _file_icon.html  _files_table.html  file_info.html  files_detail.html  files_import.html  files_import_progress.html  files_index.html  files_local_upload.html  files_s3_upload.html  files_search.html  files_source.html  files_upload.html
demos/: .gitignore  demo-datasette.yaml  filesystem-storage.md  render-cell-table.md  search-and-permissions.md  search-demo-datasette.yaml
docs/: json-api-design.md
notes/: upload-ui-demo.md
prototype/: create_bucket.py  index.html  server.py
reports/: 01-stored-xss-inline-file-serving.md  02-path-traversal-filesystem-storage.md  03-no-file-type-validation.md  04-missing-security-headers.md  05-csrf-protection-issues.md  06-filename-sanitization-gaps.md
tests/: conftest.py  test-file-picker.html  test_blob_storage.py  test_delete_api.py  test_download_security.py  test_files.py  test_get_file.py  test_owner_permissions.py  test_path_traversal.py  test_security_exploit_01.py  test_security_exploit_02.py  test_security_exploit_03.py  test_security_exploit_04.py  test_security_exploit_05.py  test_security_exploit_06.py  test_thumbnails.py  test_update_api.py  test_upload_api.py
